# PicoLight

./: .gitignore  .gitmodules
embedded/Actuator/: MosfetDriver.asc
embedded/Actuator/PicoPWM/: CMakeLists.txt  pwm_control.cpp  pwm_test.cpp
embedded/Actuator/PicoPWM/include/: pwm_control.hpp
embedded/Actuator/WS2812b/: CMakeLists.txt  WS2812b.cpp  WS2812b_test.cpp  gitBash.txt
embedded/Actuator/WS2812b/include/: WS2812b.hpp
embedded/ClockCalendar/: .gitignore  CMakeLists.txt  Calendar.cpp  Clock.cpp  ClockCalendar.cmake  ClockCalendar.cpp  clkcldTest.cpp  gitBash.txt  hello_rtc.c  main.cpp
embedded/ClockCalendar/include/: Calendar.hpp  Clock.hpp  ClockCalendar.hpp
embedded/Control/: CMakeLists.txt  Control.cmake  Control.cpp  cmake2.txt  ctrlTest.cpp  gitBash.txt
embedded/Control/include/: Control.hpp
embedded/Control2/: CMakeLists.txt  Control.cmake  Control.cpp  ctrlTest.cpp
embedded/Control2/include/: Control.hpp
embedded/Logger/: CMakeLists.txt  Logger.cmake  logger.cpp
embedded/Logger/include/: Logger.hpp
embedded/PicoRTC/: CMakeLists.txt  PicoRTC.cmake  PicoRTC.cpp  rtcTest.cpp
embedded/PicoRTC/include/: PicoRTC.hpp
embedded/Sensor/: BH1750FVI.cpp  BH1750FVI.hpp  CMakeLists.txt  CMakesLists.txt  Sensor.cmake  testSensor.cpp
embedded/Sensor/include/: BH1750FVI.hpp
embedded/Serial_com/: CMakeLists.txt  Serial.cpp  SerialCommunication.cpp  serial.cmake
embedded/Serial_com/include/: SerialCommunication.hpp
embedded/Serial_com/new_serial/: serial.cpp
embedded/main/: CMakeLists.txt  main.cpp
embedded/main2/: CMakeLists.txt  main.cpp
embedded/main_pico-host/: CMakeLists.txt  main.cpp
host/: date_time_provider.cpp  date_time_provider.hpp  g++.txt  host.cpp  log.txt  log_manager.cpp  log_manager.hpp  logger.cpp  logger.hpp  login_manager.cpp  login_manager.hpp  new_log.txt  serial_communication.cpp  serial_communication.hpp
host/Test/: g++.txt  host.cpp  login_manager.cpp  serial_communication.cpp  serial_communication.hpp  serial_test.cpp  serial_test2.cpp
